# AdvPT

Assignment/A/: CMakeLists.txt  Matrix.h  MatrixProduct.cpp  MatrixTest.cpp
Assignment/B/: CMakeLists.txt  Matrix.h  MatrixLike.h  Solver.cpp  SolverShort.cpp  SolverTest.cpp  Stencil.h  Vector.h  Vector_Kopie.h
